# RTV-ModChecker

./: .gitignore  README.md  clear-analyses.sh  scan.sh  update-report.sh
Mod-Checker/: pyproject.toml
Mod-Checker/mod_checker/: __init__.py  binary_pipeline.py  cli.py  models.py  report.py  rules.py  scanner.py  source_modworkshop.py  storage.py  utils.py
Mod-Checker/rtv_mod_checker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
Mod-Checker/tests/: test_scoring.py  test_utils.py
tmp/review50912/extracted/: LICENCE.md  README.md  changelog.txt.yaml  mod.txt
tmp/review50912/extracted/.godot/imported/: SourceCodePro-Regular.ttf-5cad1ca49b757989a19b142545aa67e4.fontdata  SourceCodePro-Regular.ttf-5cad1ca49b757989a19b142545aa67e4.md5
tmp/review50912/extracted/Fonts/: SourceCodePro-Regular.ttf.import
tmp/review50912/extracted/mods/dev-console/: ConsoleInput.gd  DevConsole.gd  DevConsole.tscn  Main.gd
tmp/review56089/extracted/: mod.txt
tmp/review56089/extracted/mods/CheatMenu/: CHANGELOG.md  CHANGELOG_PUBLIC.md  Main.gd
